// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileCard should have a className containing the tileId 1`] = `
<button
  className="tile-card tile-type-1 undefined"
/>
`;

exports[`TileCard should not display the tile infos 1`] = `
<button
  className="tile-card tile-type-1 undefined"
/>
`;

exports[`TileCard should react to mouse events 1`] = `
<button
  className="tile-card tile-type-1 undefined"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  onMouseEnter={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  onMouseLeave={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
/>
`;

exports[`TileCard when focused should display the tile infos 1`] = `
<button
  className="tile-card tile-type-1 undefined"
>
  tile 1
</button>
`;

exports[`TileCard when selected should have a 'selected' className 1`] = `
<button
  className="tile-card tile-type-1 selected"
/>
`;
